syntax = "proto3";
option go_package = ".;proto";

message douyin_user_register_request{
  string username = 1 ; //注册用户名，最长32
  string password = 2 ; //密码，最长32
}

message douyin_user_register_response{
  int32 status_code = 1 ; //状态码,0-success, others-fail
  string status_msg = 2 ; //状态消息
  int64 user_id = 3 ; //用户id
  string token = 4 ; //用户鉴权token
}

message user {
  int64 id = 1 ;
  string name = 2 ;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
}

message IdRequest {
  int64 id = 1 ;
  string token = 2 ;
  bool need_token =3;
  int64 search_id = 4;
}

message douyin_feed_request {
  int64 latest_time = 1 ;
  string token = 2 ;
}

message douyin_feed_response {
  int32 status_code = 1 ; //状态码,0-success, others-fail
  string status_msg = 2 ; //状态消息
  repeated Video video_list = 3 ;
  int64  next_time = 4 ; // 本次的返回视频中时间戳最早的，作为下次请求的latest_time
}

message Video{
  int64 id = 1 ; // 视频唯一标识
  user author = 2 ; // 视频作者信息
  string play_url = 3 ; // 视频播放地址
  string cover_url = 4 ; // 视频封面地址
  int64  favorite_count = 5 ; // 视频点赞数
  int64 comment_count = 6 ; // 视频评论数
  bool is_favorite = 7 ; // 是否已点赞
}

message douyin_publish_action_request{
  string token = 2 ; //用户鉴权token
  string video_name = 3 ; //发布的视频的名字
}

message douyin_publish_action_response{
  int32 status_code = 1 ; //状态码,0-success, others-fail
  string status_msg = 2 ; //状态消息
}

message douyin_publish_list_request{
  string token = 1 ; //用户鉴权token
  int64 user_id =2; //用户id
}

message douyin_publish_list_response{
  int32 status_code = 1 ; //状态码,0-success, others-fail
  string status_msg = 2 ; //状态消息
  repeated Video video_list = 3 ; // 用户的视频列表
}

message douyin_favorite_list_request{
  int64 user_id = 1 ;
  string token = 2 ;
}

message douyin_favorite_list_response{
  int32 status_code = 1 ;
  string status_msg = 2 ;
  repeated Video video_list = 3 ;
}

message douyin_favorite_action_request{
  int64 user_id = 1 ;
  string token = 2 ;
  int64 video_id = 3 ;
  int32 action = 4 ;  //1:favorite,2:unfavorite
}

message douyin_favorite_action_response{
  int32 status_code = 1 ;
  string status_msg = 2 ;
}

message video_id_request{
  int64 video_id = 1 ;
  int64 search_id = 2 ;
}

message douyin_comment_action_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
  int64 video_id = 3; // 视频id
  int32 action_type = 4; // 1-发布评论，2-删除评论
  string comment_text = 5; // 用户填写的评论内容，在action_type=1的时候使用
  int64 comment_id = 6; // 要删除的评论id，在action_type=2的时候使用
}


message douyin_comment_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

message douyin_comment_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
  int64 video_id = 3; // 视频id
}

message douyin_comment_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Comment comment_list = 3; // 评论列表
}

message Comment {
  int64 id = 1; // 视频评论id
  user user =2; // 评论用户信息
  string content = 3; // 评论内容
  string create_date = 4; // 评论发布日期，格式 mm-dd
}


service Server{
  rpc Register(douyin_user_register_request) returns (douyin_user_register_response);
  rpc Login(douyin_user_register_request) returns (douyin_user_register_response);
  rpc GetUserById(IdRequest) returns (user);
  rpc GetUserFeed(douyin_feed_request) returns (douyin_feed_response);
  rpc PublishAction(douyin_publish_action_request) returns (douyin_publish_action_response);
  rpc PublishList(douyin_publish_list_request) returns (douyin_publish_list_response);
  rpc FavoriteAction(douyin_favorite_action_request) returns (douyin_favorite_action_response);
  rpc FavoriteList(douyin_favorite_list_request) returns (douyin_favorite_list_response);
  rpc GetVideoById(video_id_request) returns (Video);
  rpc CommentAction(douyin_comment_action_request) returns (douyin_comment_action_response);
  rpc CommentList(douyin_comment_list_request) returns (douyin_comment_list_response);
}

